@@ -86,7 +86,7 @@ class Encoding
              * @return string
              *   Always 'polyfill'.
              */
-            function mb_detect_encoding($string = '', $encodingList = '', $strict = false): string
+            function mb_detect_encoding($string = '', $encodingList = null, $strict = false): string
             {
                 return 'polyfill';
             }
@@ -226,7 +226,7 @@ class Encoding
             return $this->pool->messages->getHelp('stringTooLarge');
         }
 
-        $encoding = mb_detect_encoding($data);
+        $encoding = mb_detect_encoding($data, 'auto', true);
         $data = mb_convert_encoding($data, 'UTF-32', $encoding === false ? null : $encoding);
         if (empty($data)) {
             // Unable to convert this string into something we can completely
@@ -260,7 +260,7 @@ class Encoding
      * @return string|bool
      *   The result.
      */
-    public function mbDetectEncoding(string $string, string $encodinglist = 'auto', bool $strict = false)
+    public function mbDetectEncoding(string $string, string $encodinglist = 'auto', bool $strict = true)
     {
         return mb_detect_encoding($string, $encodinglist, $strict);
     }
